# hyp3-isce2

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements-static.txt
.github/: CODEOWNERS
.github/workflows/: build.yml  changelog.yml  coverage-report.yml  create-jira-issue.yml  labeled-pr.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml  test.yml
src/hyp3_isce2/: __init__.py  __main__.py  burst.py  burst_download.py  dem.py  hyp3_gamma_dem.py  insar_stripmap.py  insar_tops.py  insar_tops_burst.py  insar_tops_multi_burst.py  insar_tops_multi_bursts.py  localize_dem.py  logger.py  logging.py  merge_tops_bursts.py  packaging.py  process.py  s1_auxcal.py  slc.py  stripmapapp_alos.py  topsapp.py  utils.py  water_mask.py
src/hyp3_isce2/etc/: download_example.py  entrypoint.sh
src/hyp3_isce2/metadata/: __init__.py  create.py  insar.py  rtc.py  util.py
src/hyp3_isce2/metadata/templates/: insar_burst_base.md.txt.j2
src/hyp3_isce2/metadata/templates/insar_burst/: insar_burst_base.md.txt.j2  insar_burst_merge_readme.md.txt.j2  insar_burst_readme.md.txt.j2  insar_multi_burst_readme.md.txt.j2  readme.md.txt.j2
src/hyp3_isce2/templates/: readme.md.txt.j2  stripmapapp_alos.xml  template.kml  topsapp.xml
src/hyp3_isce2/templates/insar_burst/: readme.md.txt
tests/: __init__.py  conftest.py  test_burst.py  test_dem.py  test_entrypoints.py  test_insar_tops_burst.py  test_insar_tops_multi_burst.py  test_localize_dem.py  test_merge_tops_bursts.py  test_packaging.py  test_s1_auxcal.py  test_slc.py  test_stripmapapp.py  test_topsapp.py  test_utils.py  test_water_mask.py
tests/data/: create_merge_test_data.py  isce2_s1_obj.xml  test_empty.tif  test_geotiff_4326.tif  test_geotiff_far_north.tif  water_mask_input.tif  water_mask_output_info.txt
tests/data/packaging/: topsProc.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250406T022008_20250406T022035_058630_07421F_93A7.SAFE/: manifest.safe
tests/data/packaging/S1A_IW_SLC__1SDV_20250406T022008_20250406T022035_058630_07421F_93A7.SAFE/annotation/: s1a-iw2-slc-vv-20250406t022010-20250406t022035-058630-07421f-005.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250406T022008_20250406T022035_058630_07421F_93A7.SAFE/annotation/calibration/: calibration-s1a-iw1-slc-vh-20250406t022009-20250406t022034-058630-07421f-001.xml  calibration-s1a-iw2-slc-vh-20250406t022010-20250406t022035-058630-07421f-002.xml  noise-s1a-iw3-slc-vv-20250406t022008-20250406t022033-058630-07421f-006.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250406T022008_20250406T022035_058630_07421F_93A7.SAFE/annotation/rfi/: rfi-s1a-iw1-slc-vv-20250406t022009-20250406t022034-058630-07421f-004.xml  rfi-s1a-iw2-slc-vh-20250406t022010-20250406t022035-058630-07421f-002.xml  rfi-s1a-iw2-slc-vv-20250406t022010-20250406t022035-058630-07421f-005.xml  rfi-s1a-iw3-slc-vv-20250406t022008-20250406t022033-058630-07421f-006.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250406T022008_20250406T022035_058630_07421F_93A7.SAFE/preview/: product-preview.html
tests/data/packaging/S1A_IW_SLC__1SDV_20250418T022008_20250418T022035_058805_074946_C7D4.SAFE/annotation/: s1a-iw1-slc-vh-20250418t022009-20250418t022034-058805-074946-001.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250418T022008_20250418T022035_058805_074946_C7D4.SAFE/annotation/calibration/: calibration-s1a-iw3-slc-vv-20250418t022008-20250418t022033-058805-074946-006.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250418T022008_20250418T022035_058805_074946_C7D4.SAFE/annotation/rfi/: rfi-s1a-iw2-slc-vh-20250418t022010-20250418t022035-058805-074946-002.xml  rfi-s1a-iw2-slc-vv-20250418t022010-20250418t022035-058805-074946-005.xml  rfi-s1a-iw3-slc-vv-20250418t022008-20250418t022033-058805-074946-006.xml
tests/data/packaging/S1A_IW_SLC__1SDV_20250418T022008_20250418T022035_058805_074946_C7D4.SAFE/preview/: map-overlay.kml
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20200604T022307_20200604T022318_032861_03CE65_C158.SAFE/: manifest.safe
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20200604T022307_20200604T022318_032861_03CE65_C158.SAFE/annotation/: s1a-iw2-slc-vv-20200604t022307-20200604t022321-032861-03ce65-001.xml  s1a-iw3-slc-vv-20200604t022308-20200604t022319-032861-03ce65-002.xml
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20200616T022308_20200616T022319_033036_03D3A3_7466.SAFE/: manifest.safe
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20200616T022308_20200616T022319_033036_03D3A3_7466.SAFE/annotation/: s1a-iw2-slc-vv-20200616t022308-20200616t022322-033036-03d3a3-001.xml  s1a-iw3-slc-vv-20200616t022309-20200616t022320-033036-03d3a3-002.xml
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20220814T125820_20220814T125829_044549_055128_F814.SAFE/: manifest.safe
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20220814T125820_20220814T125829_044549_055128_F814.SAFE/annotation/: s1a-iw2-slc-vv-20220814t125820-20220814t125832-044549-055128-001.xml
tests/data/packaging/multi_burst/S1A_IW_SLC__1SSV_20220907T125822_20220907T125830_044899_055CF1_B95E.SAFE/: manifest.safe
tests/data/packaging/single_burst/: topsApp.xml  topsProc.xml
tests/data/packaging/single_burst/S1B_IW_SLC__1SSV_20180628T151555_20180628T151555_011575_015476_33AD.SAFE/: manifest.safe
tests/data/packaging/single_burst/S1B_IW_SLC__1SSV_20190705T151602_20190705T151602_017000_01FFC4_26ED.SAFE/: manifest.safe
tests/data/packaging/slc/: topsApp.xml
tests/data/packaging/slc/S1A_IW_SLC__1SDV_20250418T022008_20250418T022035_058805_074946_C7D4.SAFE/: manifest.safe
tests/data/test_case/S1_136232_IW2_20200604_20200616_VV_INT80_663F/: S1_136232_IW2_20200604_20200616_VV_INT80_663F.txt  S1_136232_IW2_20200604_20200616_VV_INT80_663F_README.md.txt
tests/data/test_case/dem/: down2_res.dem.wgs84  down2_res.dem.wgs84.aux.xml  down2_res.dem.wgs84.xml
tests/data/test_case/geom_reference/IW2/: down2_lat_01.rdr  down2_lat_01.rdr.aux.xml  down2_lat_01.rdr.xml  down2_lon_01.rdr  down2_lon_01.rdr.xml
(+39 files in other folders)
