[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3_isce2"
requires-python = ">=3.8"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "HyP3 plugin for ISCE2 processing"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy",
  "dem_stitcher>=2.4.0",
  "rasterio",
  "shapely",
  "jinja2",
  "asf_search>=6.4.0",
  "geopandas",
  "gdal",
  "s3fs",
  "pyarrow",
  "hyp3lib>=2,<3",
  # FIXME specifying either of the below dependencies causes the build to fail
  # "opencv",
  # "isce2>=2.6.3",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "flake8",
    "flake8-import-order",
    "flake8-blind-except",
    "flake8-builtins",
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
]

[project.urls]
Homepage = "https://github.com/ASFHyP3/hyp3-ISCE2"
Documentation = "https://hyp3-docs.asf.alaska.edu"

[project.scripts]
insar_tops_burst = "hyp3_isce2.insar_tops_burst:main"
insar_tops = "hyp3_isce2.insar_tops:main"
insar_stripmap = "hyp3_isce2.insar_stripmap:main"

[project.entry-points.hyp3]
insar_tops_burst = "hyp3_isce2.insar_tops_burst:main"
insar_tops = "hyp3_isce2.insar_tops:main"
insar_stripmap = "hyp3_isce2.insar_stripmap:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
