[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3_isce2"
requires-python = ">=3.10"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "HyP3 plugin for ISCE2 processing"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy",
  "dem_stitcher>=2.5.8",
  "rasterio",
  "shapely",
  "jinja2",
  "asf_search>=6.4.0",
  "gdal",
  "hyp3lib>=3,<4",
  "s1_orbits",
  "burst2safe"
  # Conda-forge only dependencies are listed below
  # "opencv",
  # "isce2>=2.6.3",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
]

[project.urls]
Homepage = "https://github.com/ASFHyP3/hyp3-ISCE2"
Documentation = "https://hyp3-docs.asf.alaska.edu"

[project.scripts]
insar_tops_burst = "hyp3_isce2.insar_tops_burst:main"
insar_tops = "hyp3_isce2.insar_tops:main"
insar_stripmap = "hyp3_isce2.insar_stripmap:main"
merge_tops_bursts = "hyp3_isce2.merge_tops_bursts:main"

[project.entry-points.hyp3]
insar_tops_burst = "hyp3_isce2.insar_tops_burst:main"
insar_tops = "hyp3_isce2.insar_tops:main"
insar_stripmap = "hyp3_isce2.insar_stripmap:main"
merge_tops_bursts = "hyp3_isce2.merge_tops_bursts:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"
markers = "integration"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
# The directories to consider when resolving first- vs. third-party imports.
# See: https://docs.astral.sh/ruff/settings/#src
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    # TODO: Uncomment the following extensions and address their warnings:
    # "D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    # "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D1", "ANN"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
install_types = true
non_interactive = true
pretty = true
disable_error_code = ["import-untyped"]
